[project]
name = "ai-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent>=0.1.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.24",
    "openai>=1.88.0",
    "streamlit>=1.46.0",
    "typing>=3.10.0.0",
]
